--- a/ECE.tex
+++ b/ECE.tex
@@ -1,7 +1,14 @@
+\documentclass{article}
 \title{Distillation as a Defense to Adversarial Perturbations against Convolutional Neural Networks}
 \author{Haobei Song \\
         University of Waterloo}
-\documentclass{article}
+\begin{document}
+
+\maketitle
+\pagenumbering{gobble}
+\newpage
+\pagenumbering{arabic}
+
 \begin{abstract}
 	Convolutional neural network (CNN) as a well developed deep learning architecture has been widely used in computer vision such as automatic inspection, autonomous driving, image processing. 
 	Though state-of-art accuracy by elaborately designed CNN was achieved in many computer vision tasks, 
@@ -11,5 +18,4 @@
 	In this study, the defensive effect of distillation training for CNN is evaluated together with traditional trained CNN, and .
 \end{abstract}
 
-\begin{document}
 \end{document}
