--- a/ECE.tex
+++ b/ECE.tex
@@ -17,5 +17,7 @@
 	such as the CNN used in autonomous driving which might be crushed by slight modification of the environment. 
 	In this study, the defensive effect of distillation training for CNN is evaluated together with traditional trained CNN, and .
 \end{abstract}
+\section{Introduction}
+Consider when humans are learning to recognize the digis, they learned more information than the label given such as the similarity between different digits, which is some information left out by traditional training with hard label. Though soft label method has been suggested but crafting such soft label is also questionable as there is no general rule to create a label with perimetrize the relationship between different category as percieved by humans, it also requres a considerable amount of effort to do these tedious task without a mandated rule.
 
 \end{document}
