--- a/Q.tex
+++ b/Q.tex
@@ -102,7 +102,7 @@ However, there are other protocols which could achieve the $(3,4)$ threshold sch
 From now no, consider it possible to construct a $(3, 4)$ threshold scheme procotol, which I will return back to later. We can always discard one qubit of the shared states (by tracing out that state to discard as shown by (2) and (3), and use the $(3,4)$ threshold scheme to implement a $(3, 3)$ threshold scheme. The same is true to obtain a $(2,2)$ threshold scheme from a $(2, 3)$ threshold scheme or more generally:
 
 \paragraph{Theorem 1.}
-\textit{From any $(k,n)$ threshold scheme with $n > k$, a $(k, n-1)$ threshold scheme can be constructed by discarding one share.} \\\\
+\textit{From any $(k,n)$ threshold scheme with $n > k$, a $(k, n-1)$ threshold scheme can be constructed by discarding one share.} 
 \paragraph{Proof:} Drawn from the study of classical secret sharing, a $(k,n)$ threshold scheme can be constructed as long as $n \ge k$. But this is not the case for quantum secret sharing as a result of the famous "no-cloning theorem"
 
 
